<resources>
    <string name="app_name">My Application</string>
    <string name="newContact">Novo contato</string>
    <string name="newUser">Novo usuário</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="contato">Contatos</string>
    <string name="confPassword">Conf. password</string>
    <string name="nome">Nome</string>
    <string name="save">Salvar</string>
    <string name="telefone">Telefone</string>
    <string name="btn_login">Login</string>
    <string name="btn_cadastrar">Novo usuário</string>
    <string name="btn_novoContato">Novo contato</string>
    <string name="InvalidLogin">Login, preencha o campo para logar</string>
    <string name="novoUsario">Novo usuário</string>
    <string name="senha_diferente">!ERRO! As senhas não são iguais!</string>
    <string name="campoVazio">!ERRO! Algum campo está vazio!</string>
    <string name="usuarioJaExiste">!ERRO! Este nome de usuário já está em uso.</string>
    <string name="criacaoDeUserCompleta">Criação de usuário feita com sucesso</string>
    <string name="loginInvalid">!ERRO! Login invalido.</string>
</resources>